--- a/index.html
+++ b/index.html
@@ -70,6 +70,39 @@
                         </div>
                     </div>
                 </div>
+                    <div class="education-history">
+                        <h3 class="education-title">Education Journey</h3>
+                        <div class="timeline">
+                            <div class="timeline-item">
+                                <div class="timeline-marker"></div>
+                                <div class="timeline-content">
+                                    <h4>Elementary School</h4>
+                                    <p class="institution">SDN CIMUNING 5</p>
+                                </div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="timeline-marker"></div>
+                                <div class="timeline-content">
+                                    <h4>Junior High School</h4>
+                                    <p class="institution">SMP TERATAI PUTIH GLOBAL</p>
+                                </div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="timeline-marker"></div>
+                                <div class="timeline-content">
+                                    <h4>Vocational School</h4>
+                                    <p class="institution">SMK TERATAI PUTIH GLOBAL 4</p>
+                                </div>
+                            </div>
+                            <div class="timeline-item future">
+                                <div class="timeline-marker"></div>
+                                <div class="timeline-content">
+                                    <h4>University</h4>
+                                    <p class="institution">Next Chapter Loading...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
