--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                                     <p class="institution">SMK TERATAI PUTIH GLOBAL 4</p>
                                 </div>
                             </div>
-                            <div class="timeline-item future">
+                            <div class="timeline-item">
                                 <div class="timeline-marker"></div>
                                 <div class="timeline-content">
                                     <h4>University</h4>
-                                    <p class="institution">Next Chapter Loading...</p>
+                                    <p class="institution">Gunadarma University</p>
                                 </div>
                             </div>
                         </div>
