--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <div class="timeline-marker"></div>
                                 <div class="timeline-content">
                                     <h4>University</h4>
-                                    <p class="institution">Gunadarma University</p>
+                                    <p class="institution">GUNADARMA UNIVERSITY</p>
                                 </div>
                             </div>
                         </div>
